Fixes #2137: Show back arrow on mobile

--- a/sass/_chatbox.scss
+++ b/sass/_chatbox.scss
@@ -618,8 +618,9 @@
         .chatbox {
             .box-flyout {
                 .chatbox-navback {
+                    margin: auto 0;
+                    margin-right: 1em;
                     display: flex;
-                    padding-right: 1em;
                     .fa-arrow-left {
                         &:before {
                             color: white;
